<resources>
    <string name="app_name">Smart Movie Searcher</string>
    <string name="search">Search</string>
    <string name="required">*Required</string>
    <string name="releaseYear">Release Year</string>
    <string name="title">Title*</string>
    <string name="directors"><b>Directors: </b></string>
    <string name="actors"><b>Actors: </b></string>
    <string name="plot"><b>Plot description: </b></string>
    <string name="score"><b>MetaScore: </b></string>
    <string name="boxOffice"><b>Box Office Sales: </b></string>
    <string name="websiteURL"><b>Website URL: </b></string>

    <string-array name="type_options">
        <item>No filter</item>
        <item>TV Series</item>
        <item>Movie</item>
        <item>Video Game</item>
    </string-array>
</resources>
