<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="stateHidden">


    <TextView
        android:id="@+id/appTitle_textView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp" />

    <EditText
        android:id="@id/title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/appTitle_textView"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/releaseYear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/releaseYear"
        android:inputType="date" />

    <Spinner
        android:id="@+id/type_dropDown"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/releaseYear"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/required"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@id/type_dropDown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/required"
        android:textSize="12dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/search"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/required"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/search" />


</RelativeLayout>

